fix overlapping focus on drive sidebar

--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -334,11 +334,10 @@
                     overflow: hidden;
                     text-overflow: ellipsis;
                     .leftside-menu-category_main();
-                    margin: 0;
                     display: flex;
                     align-items: center;
                     cursor: pointer;
-                    margin-left: -5px;
+                    margin: 0 0 2px -5px;
                     padding-left: 5px;
                     .fa, .cptools {
                         display: inline-block;
